--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,49 @@
 <html>
   <head>
-    <title>My Angular App!</title>
+    <title>FlapperNews - My Angular App!</title>
+    <!-- build:css bootstrap.min.css -->
+    <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!-- endbuild -->
+    <link rel="stylesheet" type="text/css" href="app.css">
     <!-- build:js app.js -->
     <script src="../node_modules/angular/angular.js"></script>
     <script src="js/app.js"></script>
     <!-- endbuild -->
   </head>
   <body ng-app="flapperNews" ng-controller="MainCtrl">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
 
-    <div>
-      {{ test }}
+        <div class="page-header">
+          <h1>{{ headerMessage }}</h1>
+        </div>
+
+        <form ng-submit="addPost()" class="postform">
+          <h3>Add a new post</h3>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Add post title..." 
+                   ng-model="title" ></input>
+          </div>
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Add link here"
+                   ng-model="link"></input>
+          </div>
+          <button type="submit" class="btn btn-primary">Post it!</button>
+        </form>
+
+        <div ng-repeat="post in posts | orderBy: '-upvotes'">
+          <span class="glyphicon glyphicon-thumbs-up"
+                ng-click="incrementUpvotes(post)"></span>
+          <span  class="glyphicon glyphicon-thumbs-down"
+                ng-click="decrementUpvotes(post)"></span>
+          upvotes: {{ post.upvotes }} 
+          <span class="singlepost">
+            <a ng-show="post.link" href="{{post.link}}">{{post.title}}</a> 
+            <span ng-hide="post.link">{{ post.title }}</span>
+          </span>
+        </div>
+        
+      </div>
     </div>
-    <ul ng-repeat="post in posts | orderBy: '-upvotes'">
-      <li>{{ post.title }} - upvotes: {{ post.upvotes }} </li>
-    </ul>
-
   </body>
 </html>
